@@ -26,6 +26,7 @@ Bugs fixed:
 (#683) Fix !Berserk Strength being unsellable.
 (#685) Scrolls of Create Trap now ID on use.
 (#688) Mages once more get a message when they can't learn new spells from a book.
+(#690) Item descriptions now take player speed into account.
 (#691) Make of Open Wounds similar to ther pval-less rings in that it doesn't need ID.
 (#694) Fix dropped rods recharging, and any other rod-related oddities.
 (#698) Added '!' to 'R' prompt to rest until mana or hp are full.
@@ -47,6 +48,7 @@ Bugs fixed:
 (#739) Bonuses for {excellent}/{good} items that have been wielded should show up on character screen and object recall.
 (#740, partial #532) Color-code monster melee attacks by how dangerous they are to the current player.
 (#741) Stop generating spurious staircases under the player on recall/teleport.
+(#742) Mention tunnelling ability in item descriptions.
 (#747) ui-birth.c needs to handle going directly from character sheet to sex prompt.
 (#748) Allow Rings of Delving to activate.
 (#755) Fix pseudo-id of branded ammo, so already-known ammo doesn't get pseudo-ID'd.
@@ -58,6 +60,7 @@ Add Word of Recall status to the status line.
 Tone down the frequency of {excellent} items somewhat, and tweak {good} frequency.
 Remove the 'K' command and instead put a prompt after the 'destroy' prompt.
 Enchant Armour scrolls ID when reading them, not when they are successfully read.
+Fix artifact recharge times.
 Tone down Troll Priest HP.
 Include criticals damage in the object description's average display.
 Make Kavlax 'scary dark like Anclagon'.
